# OS_EXPERT

./: .gitignore  Blog.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  os_expert_env_environment.py  pyproject.toml  requirements.txt  test_env.py  train.py
openenv_os_expert_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
os_expert_env/: README.md
pipeline/: episode_generator.py  project_templates.py
reward/: __init__.py  aggregator.py  grader.py  safety_oracle.py
server/: __init__.py  app.py  dashboard.py
